# amz-bs-analysis

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx
app/market/: page.tsx
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/pixii_api/: config.py  main.py
backend/src/pixii_api/agents/: base.py  constraint_modeling.py  export_planner.py  failure_analysis.py  feedback_interpretation.py  fidelity_guardrail.py  input_processing.py  output_review.py  product_understanding.py  prompt_composition.py  workflow_planner.py
backend/src/pixii_api/llm/: nvidia_client.py  nvidia_image_client.py  prompt_loader.py
backend/src/pixii_api/llm/prompts/: constraint_modeling.j2  export_planner.j2  failure_analysis.j2  feedback_interpretation.j2  fidelity_guardrail.j2  input_processing.j2  output_review.j2  product_understanding.j2  prompt_composition.j2  workflow_planner.j2
backend/src/pixii_api/routers/: enhance.py  feedback.py  health.py
backend/src/pixii_api/schemas/: agent_io.py  enhance.py  session_state.py
backend/src/pixii_api/services/: image_utils.py  pipeline.py  state_store.py
backend/tests/e2e/: test_enhance_workflow.py
backend/tests/unit/: test_agents.py  test_nvidia_client.py
docs/: plan.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentProgress.tsx  CandidateCard.tsx  CandidateGrid.tsx  ErrorBanner.tsx  FeedbackPanel.tsx  IntentPanel.tsx  (+2 more)
infra/: docker-compose.yml  render.yaml
memory/: MEMORY.md  project_pixii.md
(+13 files in other folders)
