[project]
name = "pixii-api"
version = "0.1.0"
description = "Agentic product photo enhancer backend"
readme = "README.md"
authors = [
    { name = "7zenox", email = "vasu7400@me.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.74.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
strict = true

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]
